# subvolumize-home

./: .gitattributes  README.md  design.md  flatpak_relink_appdata.py  pyproject.toml  subvolumize_home.py
.github/workflows/: ci.yml
tasks/: audit-logging.plan.md  audit-logging.progress.md  extra-roots-and-sys-paths.plan.md  extra-roots-and-sys-paths.progress.md  real-btrfs-ci-tests.plan.md  real-btrfs-ci-tests.progress.md  reflink-copy-and-skip-missing.plan.md  reflink-copy-and-skip-missing.progress.md  require-tool-feature-checks.plan.md  require-tool-feature-checks.progress.md
tests/: test_flatpak_relink_appdata.py  test_integration_real_btrfs.py  test_subvolumize_home.py
